--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -1,8 +1,8 @@
 backend:
   name: github
-  repo: hangvane/hexo-netlify-cms-vercel # Path to your Github/Gitlab repository
+  repo: lzhen186/hexosite # Path to your Github/Gitlab repository
   branch: main # Branch to update
-  base_url: https://hexo-netlify-cms.vercel.app
+  base_url: https://opensite.vercel.app
 
 # These lines should *not* be indented
 media_folder: 'source/images' # Media files will be stored in the repo under source/images
